Signed-off-by: TrangJuny <thuytrang.mis93@gmail.com>

--- a/angularApp/app/shared/components/common-control/control-view/control.component.html
+++ b/angularApp/app/shared/components/common-control/control-view/control.component.html
@@ -2,5 +2,6 @@
       <app-textbox *ngSwitchCase="'textbox'" [control]="control" [form]="form"></app-textbox>
       <app-dropdown *ngSwitchCase="'dropdown'" [control]="control" [form]="form"></app-dropdown>
       <app-checkbox *ngSwitchCase="'checkbox'" [control]="control" [form]="form"></app-checkbox>
-      <app-radio *ngSwitchCase="'radio'" [control]="control" [form]="form"></app-radio>
+      <app-radio *ngSwitchCase="'radio'" [control]="control" [form]="form"></app-radio>      
+      <app-textarea *ngSwitchCase="'textarea'" [control]="control" [form]="form"></app-textarea>
 </div>
