Signed-off-by: TrangJuny <thuytrang.mis93@gmail.com>

--- a/angularApp/styles/form.scss
+++ b/angularApp/styles/form.scss
@@ -40,9 +40,9 @@
       font-weight: 400;
       margin-bottom: 0;
       left: 1.1rem;
-      top: 50%;
+      top: 2rem;
       color: rgba(0,0,0,.3);
-      transform: translateY(-50%);
+      transform: translateY(-10px);
       -webkit-transition: .2s ease all;
       transition: .2s ease all;
     }
