--- a/angularApp/styles/app.scss
+++ b/angularApp/styles/app.scss
@@ -6,6 +6,8 @@
 @import "general.scss";
 @import "form.scss";
 @import "button.scss";
+@import "upload.scss";
+
 
 @import "sidenav.scss";
 @import "tab.scss";
