--- a/angularApp/styles/form.scss
+++ b/angularApp/styles/form.scss
@@ -4,7 +4,7 @@
     
     .form-control{
       width: 100%;
-      height: 4rem;
+      min-height: 4rem;
       overflow: hidden;
       border-radius: 2px;
       padding-left: 11px;
@@ -169,3 +169,7 @@
       display: none;
   }
 }
+
+
+
+
