--- a/angularApp/styles/upload.scss
+++ b/angularApp/styles/upload.scss
@@ -41,6 +41,11 @@ kendo-upload.k-widget.k-upload.k-header {
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    img{
+        max-width: 100%;
+        max-height: 100%;
+    }
 }
 
 .update-img[_ngcontent-c1] .sub-text[_ngcontent-c1],.update-img[_ngcontent-c1] .title[_ngcontent-c1] {
@@ -51,6 +56,7 @@ kendo-upload.k-widget.k-upload.k-header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
 }
 .img-preview+.content-text{
     opacity: 0;    
